update project name in package.json to match repository

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tringuyen.github.io",
+  "name": "danghoangviet.github.io",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
